# R5nano

./: README.md
firmware/: CMakeLists.txt  basic.stm32.ld  test.py
firmware/cmake/: stm32.cmake  toolchain.cmake
firmware/config/: FreeRTOSConfig.h
firmware/src/: main.c
hardware/: pcb.kicad_pcb  pcb.kicad_prl  pcb.kicad_pro  pcb.kicad_sch
